# nurikabe_naloga

./: .gitignore  Cargo.toml  README.md  index.html  index.js  mouse.js  run_server.py  style.css  view.js  worker.js
data/: nurikabe1.csv  nurikabe10x10v1.csv  nurikabe10x10v2.csv  nurikabe10x10v3.csv  nurikabe10x10v4.csv  nurikabe10x10v5.csv  nurikabe2.csv  nurikabe3.csv  nurikabe4.csv  nurikabe5x5.csv  nurikabe6x6.csv
pkg/: README.md  nurikabe.d.ts  nurikabe.js  nurikabe_bg.wasm  nurikabe_bg.wasm.d.ts  package.json
rust-web/: package-lock.json
src/: lib.rs  log.rs  nurikabe.rs  solvers.rs  test.rs
src/solvers/: aco.rs  naive.rs  random_ant.rs  state.rs
