[package]
name = "nurikabe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"
chrono = "0.4.38"
getrandom = { version = "0.2", features = ["js"] }
color-eyre = "0.6.2"
itertools = "0.12.1"

[profile.release]
lto = true

[features]
default = ["console_error_panic_hook"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
