[package]
name = "nurikabe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.43"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
opt-level = 3

[features]
default = ["console_error_panic_hook"]
